syntax = "proto3";

option csharp_namespace = "ConsultService";

service PatientService {
    rpc AddPatient (PatientRequest) returns (PatientResponse);
}

message PatientRequest {
    string id = 1;
    string name = 2;
    string dateOfBirth = 3;
}

message PatientResponse {
    string status = 1;
}
